Inputs - Fix letter spacing / font / colour.

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -177,6 +177,7 @@ $tag-disabled-bg-color:                 palette(silver, light)        !default;
 $form--description-color:               palette(gray, light)          !default;
 $form--input-color:                     palette(gray, light)          !default;
 $form--input-color-hover:               palette(gray)                 !default;
+$form--input-color-focus:               palette(gray, dark)                 !default;
 $form--input-bg-color:                  palette(silver, light)        !default;
 $form--input-bg-color-focus:            palette(mono, white)          !default;
 $form--input-border-color:              palette(gray, lighter)        !default;
