--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -33,6 +33,8 @@
 	}
 
 	.sui-form-control {
+		font-family: $font;
+		letter-spacing: -0.025em;
 		display: block;
 		width: 100%;
 		height: $form--input-height-base;
@@ -64,6 +66,7 @@
 		}
 
 		&:focus {
+			color: $form--input-color-focus;
 			outline: 0;
 			background-color: $form--input-bg-color-focus;
 		}
